# BA-Thesis

android_experiments/: settings.gradle.kts
android_experiments/app/: build.gradle.kts
android_experiments/gradle/wrapper/: gradle-wrapper.properties
cpp_experiments/cppapp/: CMakeLists.txt  build.sh
cpp_experiments/cppapp/src/: app.cpp  appso.cpp  config.h.in  dynlib.hpp  staticlib.h
cpp_experiments/cppapp/src/lib/: lib.cpp
cpp_experiments/customlib/: CMakeLists.txt  CMakePresets.json
cpp_experiments/customlib/src/: frame.cpp  frame.h  staticlib.cxx  staticlib.h  version.h.in
cpp_experiments/mangling_sample/: run.sh  sample.cpp
cpp_experiments/toolchains/: clang-toolchain.cmake  linux-toolchain.cmake
flutter_experiments/: README.md  pubspec.yaml  run_pigeon.sh
flutter_experiments/android/: settings.gradle
flutter_experiments/android/app/: build.gradle
flutter_experiments/ios/Runner/: Info.plist  Messages.g.swift
flutter_experiments/ios/Runner.xcodeproj/: project.pbxproj
flutter_experiments/lib/: extras_page.dart  home_page.dart  main.dart  options_page.dart  routes.dart
flutter_experiments/lib/benchmark/: benchmark_data.dart  benchmark_runner.dart  benchmark_tab.dart
flutter_experiments/lib/components/: experiment_card.dart
flutter_experiments/lib/logger/: logger.dart  logger_page.dart  logger_view.dart
flutter_experiments/lib/settings/: settings_button.dart  settings_card.dart  settings_page.dart  settings_provider.dart  settings_state.dart
flutter_experiments/linux/: my_application.cc
flutter_experiments/macos/Runner/: messages.g.h  messages.g.m
flutter_experiments/macos/Runner.xcodeproj/: project.pbxproj
flutter_experiments/pigeons/: copyright.txt  method_channel_pigeon.dart
flutter_experiments/sideload_server/: pubspec.yaml
flutter_experiments/sideload_server/lib/: sideload_server.dart
flutter_experiments/sideload_server/sideload_lib/: CMakeLists.txt  build.sh  install_compiler.sh
flutter_experiments/sideload_server/sideload_lib/src/: customlib.cpp
flutter_experiments/sideload_server/sideload_lib/toolchains/: x86-toolchain.cmake
java_experiments/: build.sh
java_experiments/app/: build.sh  run.sh
java_experiments/jnilib/: CMakeLists.txt  CMakePresets.json  build.sh
opengles_experiments/opengles_android/: settings.gradle.kts
opengles_experiments/opengles_flutter/: README.md  pubspec.yaml
(+88 files in other folders)
